# inqtrix

./: .env.example  .gitignore  Agent-Architecture.md  LICENSE  README.md  inqtrix.yaml.example  pyproject.toml  webapp.py  webapp_translations.py
.streamlit/: config.toml
docs/: Agent-Architecture.md  README.md
docs/architecture/: graph-topology.md  nodes.md  overview.md  public-api.md  result-schema.md  (+2 more)
examples/: README.md  custom_anthropic_and_brave.py  custom_anthropic_with_env_search.py  custom_brave_search.py  library_basic_env.py  library_streaming.py  yaml_library_mode.py
inqtrix_webapp/: __init__.py  client.py
scripts/: parity_runner.py
tests/: _webserver_helpers.py  conftest.py  test_agent.py  test_claim_extraction.py  test_claims.py  test_config.py  test_config_bridge.py  test_context_pruning.py  test_custom_provider_adapters.py  test_docstring_completeness.py  test_i18n.py  test_json_helpers.py  test_logging_config.py  test_orchestration.py  test_parity.py  test_prompts.py  test_providers.py  test_providers_azure.py  test_providers_azure_bing.py  test_providers_azure_common.py  test_providers_azure_openai_web_search.py  test_providers_azure_web_search.py  test_providers_bedrock.py  test_risk_scoring.py  test_routes.py  test_runtime_logging.py  test_sanitization.py  test_search_provider_metadata.py  test_server_cancel_on_disconnect.py  test_server_multi_stack.py  test_server_overrides.py  test_server_security.py  test_session.py  test_source_tiering.py  test_stop_criteria.py  test_streaming.py  test_text.py  test_urls.py  test_webserver_examples.py
(+223 files in other folders)
